Run and fix bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,8 @@ html {
   border: none;
   font-size: 15px;
   line-height: 1.5;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .btn:hover {
